add overlays which would be necessary

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,5 +14,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div id="modal-overlay"></div>
+    <div id="loader-overlay"></div>
   </body>
 </html>
