--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,6 @@
     <!-- built files will be auto injected -->
     <div id="modal-overlay"></div>
     <div id="loader-overlay"></div>
-    <div id="toast-overlay"></div>
+    <div id="toasting-overlay"></div>
   </body>
 </html>
